Java roadmap updated